--- a/Science.html
+++ b/Science.html
@@ -17,7 +17,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="#home" class="brand" aria-label="Buzzbar — Home">
+      <a href="index.html#home" class="brand" aria-label="Buzzbar — Home">
         <span class="brand-line">
           <span class="brand-word buzz">Buzz</span>
           <span class="brand-word bar">Bar</span>
@@ -28,7 +28,7 @@
       <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="Products.html" class="nav-link">Products</a>
-        <a href="Science.html" class="nav-link">Science</a>
+        <a href="Science.html" class="nav-link is-active">Science</a>
         <a href="Nutrition.html" class="nav-link">Nutrition</a>
         <a href="Our-Story.html" class="nav-link">Our Story</a>
         <a href="#contact" class="nav-link">Contact</a>
