--- a/Science.html
+++ b/Science.html
@@ -17,7 +17,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="index.html#home" class="brand" aria-label="Buzzbar — Home">
+      <a href="index.html" class="brand" aria-label="Buzzbar — Home">
         <span class="brand-line">
           <span class="brand-word buzz">Buzz</span>
           <span class="brand-word bar">Bar</span>
