--- a/Nutrition.html
+++ b/Nutrition.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Buzzbar – Nutrition</title>
-  <link rel="stylesheet" href="style.css?v=11" />
+  <title>BuzzBar – Natural Energy</title>
+  <link rel="stylesheet" href="style.css?v=16" />
+  <link rel="stylesheet" href="deux-style.css" />
 </head>
-<body class="subpage subpage-nutrition">
+<body>
 
+  <!-- Soft purple band behind transparent header -->
   <div class="page-top-gradient"></div>
 
+
+  <!-- ===== NAVBAR (only once) ===== -->
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <a href="index.html#home" class="brand" aria-label="Buzzbar — Home">
+      <!-- Brand (clicks to top) -->
+      <a href="index.html" class="brand" aria-label="Buzzbar — Home">
         <span class="brand-line">
           <span class="brand-word buzz">Buzz</span>
           <span class="brand-word bar">Bar</span>
@@ -20,17 +25,21 @@
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
       </a>
 
+      <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="Products.html" class="nav-link">Products</a>
         <a href="Science.html" class="nav-link">Science</a>
         <a href="Nutrition.html" class="nav-link is-active">Nutrition</a>
         <a href="Our-Story.html" class="nav-link">Our Story</a>
-        <a href="index.html#contact" class="nav-link">Contact</a>
+        <a href="#contact" class="nav-link">Contact</a>
       </nav>
 
-      <a href="Products.html" class="cta-contact">Buy Now</a>
+      <!-- CTA -->
+      <a href="#products" class="cta-contact">Buy Now</a>
     </div>
   </header>
+
+  <main>
 
   <main>
 
