--- a/Products.html
+++ b/Products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BuzzBar – Natural Energy</title>
+  <title> Ampra – Natural Energy</title>
   <link rel="stylesheet" href="style.css?v=16" />
   <link rel="stylesheet" href="deux-style.css" />
 </head>
@@ -49,7 +49,7 @@
         <div class="product-hero-copy">
           <div class="page-hero-eyebrow">
             <span class="dot"></span>
-            <span>The Buzzbar</span>
+            <span>The Ampra Bar</span>
             <span>A snack for thought</span>
           </div>
 
@@ -77,7 +77,7 @@
             <div class="bar-3d bar-energy-3d"></div>
           </div>
           <div class="product-info">
-            <h3>Buzzbar</h3>
+            <h3>Ampra Bar</h3>
             <p class="product-tagline">Clean energy. No crash.</p>
             <p class="product-description">
               A single bar designed to replace the random mix of coffee, energy drinks and
@@ -135,7 +135,7 @@
           <span class="info-eyebrow" id="usecase-label">Study Sessions</span>
           <h3 id="usecase-title">Stay switched on, not wired</h3>
           <p id="usecase-body">
-            Grab a Buzzbar on the way to lectures or before a library session.
+            Grab an Ampra Bar on the way to lectures or before a library session.
             You get enough caffeine to feel a difference, plus protein and fiber
             so you don’t fade 45 minutes in.
           </p>
@@ -155,7 +155,7 @@
           <h2>Why a bar, not a drink?</h2>
           <p>
             We love coffee. We just don’t love depending on it for every single
-            energy gap. Buzzbar is a way to keep the ritual, but stop the chaos.
+            energy gap. Ampra Bar is a way to keep the ritual, but stop the chaos.
           </p>
         </div>
 
@@ -181,7 +181,7 @@
           </div>
 
           <div class="comparison-card comparison-card--highlight">
-            <span class="info-eyebrow">Buzzbar</span>
+            <span class="info-eyebrow">Ampra Bar</span>
             <h3>Built for focus first</h3>
             <ul class="info-list">
               <li>Moderate caffeine + L-theanine “snack for thought”.</li>
@@ -228,7 +228,7 @@
   <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-column">
-        <h3 class="footer-title">Buzzbar</h3>
+        <h3 class="footer-title">Ampra Bar</h3>
         <p>Clean energy, smarter nutrition.</p>
         <div class="footer-socials">
           <a href="#" class="social-btn">Instagram</a>
@@ -265,7 +265,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>© 2025 Buzzbar. All rights reserved.</p>
+      <p>© 2025 Ampra. All rights reserved.</p>
     </div>
   </footer>
 
