--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BuzzBar – Natural Energy</title>
+  <title>Ampra – Natural Energy</title>
   <link rel="stylesheet" href="style.css?v=16" />
   <link rel="stylesheet" href="deux-style.css" />
 </head>
@@ -30,9 +30,9 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="#home" class="brand" aria-label="Buzzbar — Home">
+      <a href="#home" class="brand" aria-label="Ampra — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Buzz</span>
+          <span class="brand-word Ampra">Buzz</span>
           <span class="brand-word bar">Bar</span>
         </span>
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
@@ -77,7 +77,7 @@
         <div class="hero-text-side">
           <h1 class="hero-headline">Energy that<br>feels good</h1>
           <p class="hero-subtext">Clean caffeine. No crash. Smooth focus.</p>
-          <a href="#products" class="cta-primary">Get BuzzBar</a>
+          <a href="#products" class="cta-primary">Get Ampra</a>
         </div>
         
         <!-- RIGHT: Product Visual Only -->
@@ -123,7 +123,7 @@
       <div class="story-columns">
         <p><strong>The problem:</strong> we needed focus that lasts, not jitters or a crash. Most options were either sugary,
           inconvenient, or just didn’t feel good.</p>
-        <p><strong>Our answer:</strong> Buzzbar—real ingredients, natural caffeine, L-theanine, and electrolytes.
+        <p><strong>Our answer:</strong> Ampra—real ingredients, natural caffeine, L-theanine, and electrolytes.
           A bar you can grab on the run that delivers smooth focus and steady energy.</p>
       </div>
 
@@ -137,7 +137,7 @@
     <!-- RIGHT: image placeholder (drop your team photo later) -->
     <aside class="story-visual">
       <!-- Replace src when you have your real team photo -->
-      <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
+      <img src="IMG_8401.JPG" alt="Ampra founders" class="story-image" />
     </aside>
   </div>
 
@@ -150,14 +150,14 @@
       <blockquote>“Build something we want to use daily.”</blockquote>
     </article>
 
-    <article class="founder-card" data-founder-name="Charlie Wiseman" data-founder-role="Co-Founder" data-founder-story="Charlie spent a decade leading high-intensity teams before co-founding Buzzbar. He obsesses over workflow-friendly nutrition and turned his commute cravings into the blueprint for our Focus blend.">
+    <article class="founder-card" data-founder-name="Charlie Wiseman" data-founder-role="Co-Founder" data-founder-story="Charlie spent a decade leading high-intensity teams before co-founding Ampra. He obsesses over workflow-friendly nutrition and turned his commute cravings into the blueprint for our Focus blend.">
       <div class="founder-avatar"><span>CW</span></div>
       <h3>Charlie Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“No jitters. No crash. Great taste.”</blockquote>
     </article>
 
-    <article class="founder-card" data-founder-name="Oliver Wiseman" data-founder-role="Co-Founder" data-founder-story="Oliver is the storyteller and community builder. He guides the Buzzbar brand, connecting with early adopters, nutritionists, and sleep scientists to make sure every bar feels like a smarter choice.">
+    <article class="founder-card" data-founder-name="Oliver Wiseman" data-founder-role="Co-Founder" data-founder-story="Oliver is the storyteller and community builder. He guides the Ampra brand, connecting with early adopters, nutritionists, and sleep scientists to make sure every bar feels like a smarter choice.">
       <div class="founder-avatar"><span>OW</span></div>
       <h3>Oliver Wiseman</h3>
       <p class="role">Co-Founder</p>
@@ -194,14 +194,14 @@
           Backed by ingredients that <span class="gold">work</span>
         </h2>
         <p class="sc-sub">
-          Clean stimulation, steady focus, fewer jitters. Here’s the “why” behind Buzzbar — and how it’s different
+          Clean stimulation, steady focus, fewer jitters. Here’s the “why” behind Ampra — and how it’s different
           from quick spikes and sugary fixes.
         </p>
       </div>
   
       <!-- Caffeine curve (illustrative) -->
       <figure class="curve">
-        <svg viewBox="0 0 640 200" role="img" aria-label="Caffeine curves: coffee spike vs Buzzbar smooth">
+        <svg viewBox="0 0 640 200" role="img" aria-label="Caffeine curves: coffee spike vs Ampra smooth">
           <!-- grid -->
           <path d="M48 20 V180 M48 180 H610" stroke="rgba(2,6,23,.12)" stroke-width="1"/>
           <!-- labels -->
@@ -214,7 +214,7 @@
           <circle cx="270" cy="40" r="3.5" fill="#ef4444"/>
           <text x="278" y="38" fill="#ef4444" font-size="11">coffee spike</text>
   
-          <!-- Buzzbar smooth -->
+          <!-- Ampra smooth -->
           <defs>
             <linearGradient id="buzzgrad" x1="0" y1="0" x2="1" y2="0">
               <stop offset="0" stop-color="#8b5cf6"/>
@@ -223,9 +223,9 @@
           </defs>
           <path d="M48 175 C 150 150, 260 90, 320 40 S 500 40, 610 150"
                 fill="none" stroke="url(#buzzgrad)" stroke-width="4"/>
-          <text x="505" y="130" fill="#6d28d9" font-size="11">Buzzbar target curve</text>
+          <text x="505" y="130" fill="#6d28d9" font-size="11">Ampra target curve</text>
         </svg>
-        <figcaption>Illustrative curves: coffee can peak fast, then dip; Buzzbar aims for a steadier lift.</figcaption>
+        <figcaption>Illustrative curves: coffee can peak fast, then dip; Ampra aims for a steadier lift.</figcaption>
       </figure>
   
       <!-- Ingredient cards -->
@@ -312,7 +312,7 @@
              carry-anywhere option with fewer spikes and no brewing.</p>
         </details>
         <details>
-          <summary>When should I use Buzzbar?</summary>
+          <summary>When should I use Ampra?</summary>
           <p>Morning classes, deep-work blocks, pre-meeting boosts, travel days. If caffeine-sensitive, start with half.</p>
         </details>
         <details>
@@ -408,7 +408,7 @@
         <p class="nt-card-summary">Fiber is kept moderate so your stomach stays happy.</p>
         <button class="nt-more-btn" type="button"
           data-nt-title="Gut-friendly blend"
-          data-nt-detail="We steer clear of heavy sugar alcohol loads that can upset routines.|Moderate fiber plus simple ingredients keep Buzzbar easy to enjoy before meetings or workouts."
+          data-nt-detail="We steer clear of heavy sugar alcohol loads that can upset routines.|Moderate fiber plus simple ingredients keep Ampra easy to enjoy before meetings or workouts."
         >Tap for breakdown</button>
       </article>
     </div>
@@ -472,7 +472,7 @@
         <p class="nt-note-summary">Morning classes, deep work, travel days and quick pre-gym fuel.</p>
         <button class="nt-more-btn" type="button"
           data-nt-title="When to use"
-          data-nt-detail="Grab Buzzbar before meetings, during study sessions or when you need a calm boost on the road.|If you are caffeine sensitive, start with half and build from there."
+          data-nt-detail="Grab Ampra before meetings, during study sessions or when you need a calm boost on the road.|If you are caffeine sensitive, start with half and build from there."
         >Dive deeper</button>
       </div>
       <div class="nt-note">
@@ -488,7 +488,7 @@
         <p class="nt-note-summary">Ready-to-go energy in seconds—no blender or fridge.</p>
         <button class="nt-more-btn" type="button"
           data-nt-title="Smart nutrition, fast fuel"
-          data-nt-detail="Healthy food should be easy. Buzzbar is built for backpacks, bike commutes and busy studios.|You get balanced macros and clean caffeine without hauling a shaker bottle."
+          data-nt-detail="Healthy food should be easy. Ampra is built for backpacks, bike commutes and busy studios.|You get balanced macros and clean caffeine without hauling a shaker bottle."
         >Dive deeper</button>
       </div>
     </div>
@@ -519,9 +519,9 @@
         </ul>
       </div>
     
-      <!-- Buzzbar -->
+      <!-- Ampra -->
       <div class="nt-compare-card good">
-        <div class="nt-co-eyebrow">🟣 Buzzbar</div>
+        <div class="nt-co-eyebrow">🟣 Ampra</div>
         <ul class="nt-list">
           <li><span class="good">✓</span> ~80 mg green-tea caffeine + theanine</li>
           <li><span class="good">✓</span> 10 g protein • 5 g fiber • 0 g added sugar*</li>
@@ -589,7 +589,7 @@
 
       <article class="sp-card">
         <div class="sp-stars" aria-label="5 stars">★★★★★</div>
-        <blockquote>“The Buzzbar actually helps me study and lock in for my difficult exams.”</blockquote>
+        <blockquote>“The Ampra actually helps me study and lock in for my difficult exams.”</blockquote>
         <footer class="sp-who">
           <span class="sp-avatar">GL</span>
           <div><strong>Gustaf L</strong><small>Student</small></div>
@@ -627,7 +627,7 @@
   <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-column">
-        <h3 class="footer-title">Buzzbar</h3>
+        <h3 class="footer-title">Ampra</h3>
         <p>Clean energy, smarter nutrition.</p>
         <div class="footer-socials">
           <a href="#" class="social-btn">Instagram</a>
@@ -639,9 +639,9 @@
       <div class="footer-column">
         <h4>Contact</h4>
         <ul>
-          <li><a href="mailto:tomwiseman@buzzbar.se">tomwiseman@buzzbar.se</a></li>
-          <li><a href="mailto:oliverwiseman@buzzbar.se">oliverwiseman@buzzbar.se</a></li>
-          <li><a href="mailto:charliewiseman@buzzbar.se">charliewiseman@buzzbar.se</a></li>
+          <li><a href="mailto:tomwiseman@Ampra.se">tomwiseman@Ampra.se</a></li>
+          <li><a href="mailto:oliverwiseman@Ampra.se">oliverwiseman@Ampra.se</a></li>
+          <li><a href="mailto:charliewiseman@Ampra.se">charliewiseman@Ampra.se</a></li>
         </ul>
       </div>
   
@@ -664,7 +664,7 @@
     </div>
   
     <div class="footer-bottom">
-      <p>© 2025 Buzzbar. All rights reserved.</p>
+      <p>© 2025 Ampra. All rights reserved.</p>
     </div>
   </footer>
 
