--- a/Products.html
+++ b/Products.html
@@ -17,9 +17,9 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="index.html" class="brand" aria-label="Buzzbar — Home">
+      <a href="index.html" class="brand" aria-label="Ampra — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Buzz</span>
+          <span class="brand-word Ampra">Buzz</span>
           <span class="brand-word bar">Bar</span>
         </span>
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
@@ -240,9 +240,9 @@
       <div class="footer-column">
         <h4>Contact</h4>
         <ul>
-          <li><a href="mailto:tomwiseman@buzzbar.se">tomwiseman@buzzbar.se</a></li>
-          <li><a href="mailto:oliverwiseman@buzzbar.se">oliverwiseman@buzzbar.se</a></li>
-          <li><a href="mailto:charliewiseman@buzzbar.se">charliewiseman@buzzbar.se</a></li>
+          <li><a href="mailto:tomwiseman@Ampra.se">tomwiseman@Ampra.se</a></li>
+          <li><a href="mailto:oliverwiseman@Ampra.se">oliverwiseman@Ampra.se</a></li>
+          <li><a href="mailto:charliewiseman@Ampra.se">charliewiseman@Ampra.se</a></li>
         </ul>
       </div>
 
@@ -316,7 +316,7 @@
         study: {
           label: 'Study Sessions',
           title: 'Stay switched on, not wired',
-          body: 'Grab Buzzbar on the way to lectures or before a library block. You get a clear lift plus actual nutrition, so your focus lasts beyond the first 40 minutes.',
+          body: 'Grab Ampra on the way to lectures or before a library block. You get a clear lift plus actual nutrition, so your focus lasts beyond the first 40 minutes.',
           bullets: [
             'Eat 20–30 minutes before you need full focus.',
             'Pairs well with one normal coffee if you want a bigger kick.',
@@ -336,7 +336,7 @@
         training: {
           label: 'Training & Recovery',
           title: 'Energy that respects your body',
-          body: 'Use Buzzbar as light pre-workout fuel or a post-session snack when you still have stuff to do afterwards.',
+          body: 'Use Ampra as light pre-workout fuel or a post-session snack when you still have stuff to do afterwards.',
           bullets: [
             'Protein + carbs to keep you moving.',
             'Moderate caffeine instead of mega-dose pre-workouts.',
@@ -346,7 +346,7 @@
         travel: {
           label: 'Travel & Late Nights',
           title: 'Airports, buses, deadlines',
-          body: 'When you are travelling or pushing a late deadline, food choices get worse and worse. Buzzbar is there to keep standards up a bit.',
+          body: 'When you are travelling or pushing a late deadline, food choices get worse and worse. Ampra is there to keep standards up a bit.',
           bullets: [
             'Lives in your backpack / tote without needing a fridge.',
             'Better than sugary snacks from the kiosk.',
