--- a/Our-Story.html
+++ b/Our-Story.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BuzzBar – Natural Energy</title>
+  <title>Ampra – Natural Energy</title>
   <link rel="stylesheet" href="style.css?v=16" />
   <link rel="stylesheet" href="deux-style.css" />
 </head>
@@ -17,9 +17,9 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <!-- Brand (clicks to top) -->
-      <a href="index.html" class="brand" aria-label="Buzzbar — Home">
+      <a href="index.html" class="brand" aria-label="Ampra — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Buzz</span>
+          <span class="brand-word Ampra">Buzz</span>
           <span class="brand-word bar">Bar</span>
         </span>
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
@@ -57,7 +57,7 @@
           </h1>
           <p class="page-hero-sub">
             We were juggling lectures, work and training, living on coffee, energy drinks
-            and random snacks. It worked – kind of – but we felt terrible. Buzzbar is our
+            and random snacks. It worked – kind of – but we felt terrible. Ampra is our
             attempt to fix that energy gap for ourselves and for people like us.
           </p>
         </div>
@@ -118,7 +118,7 @@
 
         <!-- RIGHT: real photo -->
         <aside class="story-visual" data-reveal>
-          <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
+          <img src="IMG_8401.JPG" alt="Ampra founders" class="story-image" />
           <p class="img-caption">
             Three brothers trying to build better energy habits – starting with ourselves.
           </p>
@@ -190,7 +190,7 @@
           <h2>Where we want to take this</h2>
           <p>
             Students first – because that’s where the energy gap is loudest. From there,
-            we want Buzzbar to be a default choice for anyone who cares about their
+            we want Ampra to be a default choice for anyone who cares about their
             brain as much as their schedule.
           </p>
         </div>
@@ -200,7 +200,7 @@
             <span class="info-eyebrow">Short term</span>
             <h3>Nail the first bar</h3>
             <p>
-              Get the first Buzzbar dialed – taste, nutrition, caffeine curve – and
+              Get the first Ampra dialed – taste, nutrition, caffeine curve – and
               prove that it can genuinely replace a couple of worse habits.
             </p>
           </article>
@@ -232,7 +232,7 @@
   <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-column">
-        <h3 class="footer-title">Buzzbar</h3>
+        <h3 class="footer-title">Ampra</h3>
         <p>Clean energy, smarter nutrition.</p>
         <div class="footer-socials">
           <a href="#" class="social-btn">Instagram</a>
@@ -244,9 +244,9 @@
       <div class="footer-column">
         <h4>Contact</h4>
         <ul>
-          <li><a href="mailto:tomwiseman@buzzbar.se">tomwiseman@buzzbar.se</a></li>
-          <li><a href="mailto:oliverwiseman@buzzbar.se">oliverwiseman@buzzbar.se</a></li>
-          <li><a href="mailto:charliewiseman@buzzbar.se">charliewiseman@buzzbar.se</a></li>
+          <li><a href="mailto:tomwiseman@Ampra.se">tomwiseman@Ampra.se</a></li>
+          <li><a href="mailto:oliverwiseman@Ampra.se">oliverwiseman@Ampra.se</a></li>
+          <li><a href="mailto:charliewiseman@Ampra.se">charliewiseman@Ampra.se</a></li>
         </ul>
       </div>
 
@@ -269,7 +269,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>© 2025 Buzzbar. All rights reserved.</p>
+      <p>© 2025 Ampra. All rights reserved.</p>
     </div>
   </footer>
 
@@ -329,7 +329,7 @@
         oliver: {
           name: 'Oliver Wiseman',
           role: 'Co-founder · Brand & Community',
-          body: 'Oliver looks after how Buzzbar shows up in the world – from early testers and campus partners to the messages you see online. His job is to keep us close to the people we’re building for.'
+          body: 'Oliver looks after how Ampra shows up in the world – from early testers and campus partners to the messages you see online. His job is to keep us close to the people we’re building for.'
         }
       };
 
