--- a/Nutrition.html
+++ b/Nutrition.html
@@ -19,8 +19,7 @@
       <!-- Brand (clicks to top) -->
       <a href="index.html" class="brand" aria-label="Ampra — Home">
         <span class="brand-line">
-          <span class="brand-word buzz">Buzz</span>
-          <span class="brand-word bar">Bar</span>
+          <span class="brand-word buzz">Ampra</span>
         </span>
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
       </a>
