--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Buzzbar</title>
   <link rel="stylesheet" href="style.css?v=7" />
+  <link rel="stylesheet" href="deux-style.css" />
 </head>
 <body data-page="contact">
   <div class="page-top-gradient"></div>
