Add Learn More button next to Get Ampra in hero section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         <div class="hero-text-side">
           <h1 class="hero-headline">Energy that<br>feels <em>Good</em></h1>
           <p class="hero-subtext">Clean caffeine. No crash. Smooth focus.</p>
-          <a href="#products" class="cta-primary">Get Ampra</a>
+          <div class="hero-cta-group">
+            <a href="#products" class="cta-primary">Get Ampra</a>
+            <a href="Products.html" class="cta-secondary">Learn More</a>
+          </div>
         </div>
         
         <!-- RIGHT: Product Visual Only -->
