Add Home button to navigation menu

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
       <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
+        <a href="index.html" class="nav-link">Home</a>
         <a href="Products.html" class="nav-link">Products</a>
         <a href="Science.html" class="nav-link">Science</a>
         <a href="Nutrition.html" class="nav-link">Nutrition</a>
