Add Home button to all page navigation menus

--- a/Contact.html
+++ b/Contact.html
@@ -16,6 +16,7 @@
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
       </a>
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
+        <a href="index.html" class="nav-link">Home</a>
         <a href="Products.html"  class="nav-link">Products</a>
         <a href="Science.html"   class="nav-link">Science</a>
         <a href="nutrition.html" class="nav-link">Nutrition</a>
