Add products showcase section to home page

--- a/index.html
+++ b/index.html
@@ -108,8 +108,98 @@
     </div>
   </section>
 
+<!-- ===== PRODUCTS SECTION ===== -->
+<section id="products" class="products-section" data-fade-scope>
+  <div class="container">
+    
+    <!-- Section Header -->
+    <div class="products-header">
+      <span class="section-eyebrow">Our Product</span>
+      <h2 class="products-title">One bar. Endless possibilities.</h2>
+      <p class="products-subtitle">
+        Meet Ampra — the energy bar built for students, founders, and anyone who needs clean focus without the crash.
+      </p>
+    </div>
+
+    <!-- Product Showcase -->
+    <div class="product-showcase-grid">
+      
+      <!-- Main Product Card -->
+      <article class="product-showcase-card main-product">
+        <div class="product-showcase-visual">
+          <span class="product-badge-large">New Release</span>
+          <div class="bar-3d bar-energy-3d showcase-bar"></div>
+        </div>
+        <div class="product-showcase-info">
+          <h3>Ampra Energy Bar</h3>
+          <p class="product-price">Coming Soon</p>
+          <p class="product-showcase-desc">
+            Clean caffeine from green tea, L-theanine for smooth focus, plus protein and electrolytes. 
+            The bar that replaces your coffee, energy drink, and snack — all in one.
+          </p>
+          <div class="product-showcase-features">
+            <div class="feature-item">
+              <span class="feature-icon">⚡</span>
+              <div>
+                <strong>~80mg Caffeine</strong>
+                <p>Natural green tea extract</p>
+              </div>
+            </div>
+            <div class="feature-item">
+              <span class="feature-icon">🧠</span>
+              <div>
+                <strong>L-Theanine Stack</strong>
+                <p>Calm, focused energy</p>
+              </div>
+            </div>
+            <div class="feature-item">
+              <span class="feature-icon">💪</span>
+              <div>
+                <strong>10g Protein</strong>
+                <p>Plant-based fuel</p>
+              </div>
+            </div>
+            <div class="feature-item">
+              <span class="feature-icon">🌿</span>
+              <div>
+                <strong>0g Added Sugar</strong>
+                <p>No crash, no jitters</p>
+              </div>
+            </div>
+          </div>
+          <div class="product-cta-group">
+            <a href="Products.html" class="cta-primary">Learn More</a>
+            <a href="#contact" class="cta-secondary">Get Notified</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Why Choose Ampra -->
+      <div class="why-ampra-cards">
+        <div class="why-card">
+          <span class="why-icon">🎯</span>
+          <h4>Built for Focus</h4>
+          <p>Designed for study sessions, meetings, and deep work — not just a quick sugar rush.</p>
+        </div>
+        <div class="why-card">
+          <span class="why-icon">🚀</span>
+          <h4>Grab & Go</h4>
+          <p>No brewing, no blending. Just unwrap and fuel your day in seconds.</p>
+        </div>
+        <div class="why-card">
+          <span class="why-icon">✨</span>
+          <h4>Clean Ingredients</h4>
+          <p>Plant-based, no artificial sweeteners, made with ingredients you can pronounce.</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
 <!-- ===== OUR STORY (polished) ===== -->
-<section id="our-story" class="our-story" data-fade-scope>
+<section id="our-story" class="our-story" data-fade-scope>""
   <div class="container story-grid">
 
     <!-- LEFT: copy -->
