Redesign products section with 3 quantity options (1, 6, 12 bars)

--- a/index.html
+++ b/index.html
@@ -115,84 +115,128 @@
     <!-- Section Header -->
     <div class="products-header">
       <span class="section-eyebrow">Our Product</span>
-      <h2 class="products-title">One bar. Endless possibilities.</h2>
+      <h2 class="products-title">Choose Your Quantity</h2>
       <p class="products-subtitle">
-        Meet Ampra — the energy bar built for students, founders, and anyone who needs clean focus without the crash.
+        Ampra Energy Bar — Clean caffeine, L-theanine focus, and plant-based nutrition. Pick the pack that fits your routine.
       </p>
     </div>
 
-    <!-- Product Showcase -->
-    <div class="product-showcase-grid">
-      
-      <!-- Main Product Card -->
-      <article class="product-showcase-card main-product">
-        <div class="product-showcase-visual">
-          <span class="product-badge-large">New Release</span>
-          <div class="bar-3d bar-energy-3d showcase-bar"></div>
+    <!-- Product Info Banner -->
+    <div class="product-info-banner">
+      <div class="bar-3d bar-energy-3d banner-bar"></div>
+      <div class="product-info-content">
+        <h3>Ampra Energy Bar</h3>
+        <div class="product-features-inline">
+          <span>⚡ ~80mg Caffeine</span>
+          <span>🧠 L-Theanine</span>
+          <span>💪 10g Protein</span>
+          <span>🌿 0g Added Sugar</span>
         </div>
-        <div class="product-showcase-info">
-          <h3>Ampra Energy Bar</h3>
-          <p class="product-price">Coming Soon</p>
-          <p class="product-showcase-desc">
-            Clean caffeine from green tea, L-theanine for smooth focus, plus protein and electrolytes. 
-            The bar that replaces your coffee, energy drink, and snack — all in one.
-          </p>
-          <div class="product-showcase-features">
-            <div class="feature-item">
-              <span class="feature-icon">⚡</span>
-              <div>
-                <strong>~80mg Caffeine</strong>
-                <p>Natural green tea extract</p>
-              </div>
-            </div>
-            <div class="feature-item">
-              <span class="feature-icon">🧠</span>
-              <div>
-                <strong>L-Theanine Stack</strong>
-                <p>Calm, focused energy</p>
-              </div>
-            </div>
-            <div class="feature-item">
-              <span class="feature-icon">💪</span>
-              <div>
-                <strong>10g Protein</strong>
-                <p>Plant-based fuel</p>
-              </div>
-            </div>
-            <div class="feature-item">
-              <span class="feature-icon">🌿</span>
-              <div>
-                <strong>0g Added Sugar</strong>
-                <p>No crash, no jitters</p>
-              </div>
-            </div>
+      </div>
+    </div>
+
+    <!-- Quantity Options -->
+    <div class="quantity-options-grid">
+      
+      <!-- Single Pack -->
+      <article class="quantity-card">
+        <div class="quantity-header">
+          <h3>Try It Out</h3>
+          <p class="quantity-subtitle">Single Bar</p>
+        </div>
+        <div class="quantity-visual">
+          <div class="bar-stack">
+            <div class="mini-bar"></div>
           </div>
-          <div class="product-cta-group">
-            <a href="Products.html" class="cta-primary">Learn More</a>
-            <a href="#contact" class="cta-secondary">Get Notified</a>
+        </div>
+        <div class="quantity-details">
+          <div class="quantity-amount">1 Bar</div>
+          <div class="quantity-price">
+            <span class="price-amount">Coming Soon</span>
           </div>
+          <ul class="quantity-benefits">
+            <li>Perfect for first-timers</li>
+            <li>Test the taste & effect</li>
+            <li>No commitment</li>
+          </ul>
+          <button class="quantity-cta cta-secondary">Get Notified</button>
         </div>
       </article>
 
-      <!-- Why Choose Ampra -->
-      <div class="why-ampra-cards">
-        <div class="why-card">
-          <span class="why-icon">🎯</span>
-          <h4>Built for Focus</h4>
-          <p>Designed for study sessions, meetings, and deep work — not just a quick sugar rush.</p>
+      <!-- 6-Pack (Most Popular) -->
+      <article class="quantity-card popular">
+        <span class="popular-badge">Most Popular</span>
+        <div class="quantity-header">
+          <h3>Weekly Supply</h3>
+          <p class="quantity-subtitle">6-Pack</p>
         </div>
-        <div class="why-card">
-          <span class="why-icon">🚀</span>
-          <h4>Grab & Go</h4>
-          <p>No brewing, no blending. Just unwrap and fuel your day in seconds.</p>
+        <div class="quantity-visual">
+          <div class="bar-stack">
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+          </div>
         </div>
-        <div class="why-card">
-          <span class="why-icon">✨</span>
-          <h4>Clean Ingredients</h4>
-          <p>Plant-based, no artificial sweeteners, made with ingredients you can pronounce.</p>
+        <div class="quantity-details">
+          <div class="quantity-amount">6 Bars</div>
+          <div class="quantity-price">
+            <span class="price-amount">Coming Soon</span>
+            <span class="price-per">Best value per bar</span>
+          </div>
+          <ul class="quantity-benefits">
+            <li>One bar per day for a week</li>
+            <li>Better value than single</li>
+            <li>Ideal for daily routines</li>
+          </ul>
+          <button class="quantity-cta cta-primary">Get Notified</button>
         </div>
-      </div>
+      </article>
 
+      <!-- 12-Pack -->
+      <article class="quantity-card">
+        <div class="quantity-header">
+          <h3>Stock Up</h3>
+          <p class="quantity-subtitle">12-Pack</p>
+        </div>
+        <div class="quantity-visual">
+          <div class="bar-stack bulk">
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+            <div class="mini-bar"></div>
+          </div>
+        </div>
+        <div class="quantity-details">
+          <div class="quantity-amount">12 Bars</div>
+          <div class="quantity-price">
+            <span class="price-amount">Coming Soon</span>
+            <span class="price-per">Maximum savings</span>
+          </div>
+          <ul class="quantity-benefits">
+            <li>Two weeks of energy</li>
+            <li>Lowest price per bar</li>
+            <li>Never run out</li>
+          </ul>
+          <button class="quantity-cta cta-secondary">Get Notified</button>
+        </div>
+      </article>
+
+    </div>
+
+    <!-- Additional Info -->
+    <div class="products-footer-info">
+      <p>🚚 Free shipping on orders over $50 • 🔄 30-day satisfaction guarantee • 🌱 100% plant-based</p>
     </div>
 
   </div>
