Remove founders cards and modal from home page

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
     </aside>
   </div>
 
-  <!-- Founders row (3 cards) -->
-  <div class="container founders-row" data-fade-scope>
+  <!-- Founders section removed - see Our Story page -->
+  <div class="container founders-row" data-fade-scope style="display: none;">
     <article class="founder-card" data-founder-name="Tom Wiseman" data-founder-role="Co-Founder" data-founder-story="Tom is the product tinkerer, constantly iterating on taste and nutrition profiles. From testing early batches in the family kitchen to partnering with European co-packers, he focuses on building bars that feel as good as they taste.">
       <div class="founder-avatar"><span>TW</span></div>
       <h3>Tom Wiseman</h3>
@@ -304,23 +304,7 @@
     </article>
   </div>
 </section>
-  <!-- Founder detail modal -->
-  <div class="founder-modal" role="dialog" aria-modal="true" aria-hidden="true">
-    <div class="founder-modal__overlay" data-founder-close></div>
-    <div class="founder-modal__dialog" role="document">
-      <button class="founder-modal__close" type="button" aria-label="Close founder story" data-founder-close>×</button>
-      <div class="founder-modal__content">
-        <h3 class="founder-modal__name"></h3>
-        <p class="founder-modal__role"></p>
-        <p class="founder-modal__story"></p>
-      </div>
-    </div>
-  </div>
 
-  <!-- Nice inline CTA to show .cta-primary styles outside hero -->
-  <section class="container" style="padding:40px 0;text-align:center;">
-    <button class="cta-primary" style="border:none;">Join the launch list</button>
-  </section>
 
   <!-- ===== SCIENCE ===== -->
   <section id="science" class="science-section" data-fade-scope>
