Add cool 3D box effect to Our Story text section

--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
 
     <!-- LEFT: copy -->
     <div class="story-copy">
-      <span class="section-eyebrow">Our Story</span>
+      <div class="story-3d-box">
+        <span class="section-eyebrow">Our Story</span>""
       <h2 class="story-title">
         Built for busy days.<br>
         Designed for clean, steady energy.
@@ -265,8 +266,7 @@
         <p><strong>Our answer:</strong> Ampra—real ingredients, natural caffeine, L-theanine, and electrolytes.
           A bar you can grab on the run that delivers smooth focus and steady energy.</p>
       </div>
-
-
+      </div>
     </div>
 
     <!-- RIGHT: image placeholder (drop your team photo later) -->
