Update product quantities to boxes (1/2/3 boxes with 12 bars each) and add pricing

--- a/index.html
+++ b/index.html
@@ -138,97 +138,97 @@
     <!-- Quantity Options -->
     <div class="quantity-options-grid">
       
-      <!-- Single Pack -->
+      <!-- 1 Box = 12 Bars -->
       <article class="quantity-card">
         <div class="quantity-header">
-          <h3>Try It Out</h3>
-          <p class="quantity-subtitle">Single Bar</p>
+          <h3>Starter Pack</h3>
+          <p class="quantity-subtitle">1 Box</p>
         </div>
         <div class="quantity-visual">
-          <div class="bar-stack">
-            <div class="mini-bar"></div>
+          <div class="box-stack">
+            <div class="product-box">
+              <span class="box-label">12 bars</span>
+            </div>
           </div>
         </div>
         <div class="quantity-details">
-          <div class="quantity-amount">1 Bar</div>
+          <div class="quantity-amount">1 Box (12 Bars)</div>
           <div class="quantity-price">
-            <span class="price-amount">Coming Soon</span>
+            <span class="price-amount">$29</span>
+            <span class="price-per">$2.42 per bar</span>
           </div>
           <ul class="quantity-benefits">
-            <li>Perfect for first-timers</li>
-            <li>Test the taste & effect</li>
-            <li>No commitment</li>
+            <li>Perfect to get started</li>
+            <li>12 days of clean energy</li>
+            <li>Try the Ampra difference</li>
           </ul>
-          <button class="quantity-cta cta-secondary">Get Notified</button>
+          <button class="quantity-cta cta-secondary">Buy Now</button>
         </div>
       </article>
 
-      <!-- 6-Pack (Most Popular) -->
+      <!-- 2 Boxes = 24 Bars (Most Popular) -->
       <article class="quantity-card popular">
         <span class="popular-badge">Most Popular</span>
         <div class="quantity-header">
-          <h3>Weekly Supply</h3>
-          <p class="quantity-subtitle">6-Pack</p>
+          <h3>Best Value</h3>
+          <p class="quantity-subtitle">2 Boxes</p>
         </div>
         <div class="quantity-visual">
-          <div class="bar-stack">
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
+          <div class="box-stack">
+            <div class="product-box">
+              <span class="box-label">12 bars</span>
+            </div>
+            <div class="product-box">
+              <span class="box-label">12 bars</span>
+            </div>
           </div>
         </div>
         <div class="quantity-details">
-          <div class="quantity-amount">6 Bars</div>
+          <div class="quantity-amount">2 Boxes (24 Bars)</div>
           <div class="quantity-price">
-            <span class="price-amount">Coming Soon</span>
-            <span class="price-per">Best value per bar</span>
+            <span class="price-amount">$54</span>
+            <span class="price-per">$2.25 per bar • Save $4</span>
           </div>
           <ul class="quantity-benefits">
-            <li>One bar per day for a week</li>
-            <li>Better value than single</li>
+            <li>Nearly a month's supply</li>
+            <li>Better value per bar</li>
             <li>Ideal for daily routines</li>
           </ul>
-          <button class="quantity-cta cta-primary">Get Notified</button>
+          <button class="quantity-cta cta-primary">Buy Now</button>
         </div>
       </article>
 
-      <!-- 12-Pack -->
+      <!-- 3 Boxes = 36 Bars -->
       <article class="quantity-card">
         <div class="quantity-header">
-          <h3>Stock Up</h3>
-          <p class="quantity-subtitle">12-Pack</p>
+          <h3>Stock Up & Save</h3>
+          <p class="quantity-subtitle">3 Boxes</p>
         </div>
         <div class="quantity-visual">
-          <div class="bar-stack bulk">
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
-            <div class="mini-bar"></div>
+          <div class="box-stack bulk">
+            <div class="product-box">
+              <span class="box-label">12 bars</span>
+            </div>
+            <div class="product-box">
+              <span class="box-label">12 bars</span>
+            </div>
+            <div class="product-box">
+              <span class="box-label">12 bars</span>
+            </div>
           </div>
         </div>
         <div class="quantity-details">
-          <div class="quantity-amount">12 Bars</div>
+          <div class="quantity-amount">3 Boxes (36 Bars)</div>
           <div class="quantity-price">
-            <span class="price-amount">Coming Soon</span>
-            <span class="price-per">Maximum savings</span>
+            <span class="price-amount">$75</span>
+            <span class="price-per">$2.08 per bar • Save $12</span>
           </div>
           <ul class="quantity-benefits">
-            <li>Two weeks of energy</li>
-            <li>Lowest price per bar</li>
+            <li>Over a month of energy</li>
+            <li>Maximum savings per bar</li>
             <li>Never run out</li>
           </ul>
-          <button class="quantity-cta cta-secondary">Get Notified</button>
+          <button class="quantity-cta cta-secondary">Buy Now</button>
         </div>
       </article>
 
